<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PDI1</string>
    <string name="login_title">Hello, please log in!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="auto_login">Auto log in</string>
    <string name="deactivate_auto_login">Deactivate auto login</string>
    <string name="title_activity_main">MainActivity activity</string>
    <string name="inactive_label">Inactive button -></string>
    <string name="inactive_button">Try me xD</string>
    <string name="recognize_label">Recognitor -></string>
    <string name="recognize_button">Action!</string>
    <string name="register">Register\'nlog</string>

</resources>