<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title" >

        <EditText
            android:id="@+id/login"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/login"
            android:nextFocusDown="@+id/password"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok" />
    </LinearLayout>

    <CheckBox
        android:layout_below="@id/ll"
        android:id="@+id/auto_login_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_login" />

    <ScrollView
        android:id="@+id/s_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/auto_login_checkbox" >

        <TextView
            android:id="@+id/scroll_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />
    </ScrollView>

</RelativeLayout>